--- a/css/styles.css
+++ b/css/styles.css
@@ -337,14 +337,10 @@ body {
   display: inline-flex;
   border: 2px solid #ffffff;
   padding: 1em 3em;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
   font-weight: 600;
   color: #ffffff;
   font-size: 1em;
   text-transform: uppercase;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
   -webkit-animation: appear 1s ease 1 both 4s;
           animation: appear 1s ease 1 both 4s;
 }
@@ -536,9 +532,9 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
   -ms-flex-line-pack: auto;
       align-content: auto;
 }
@@ -742,7 +738,7 @@ body {
   position: relative;
 }
 .main .model-5 .social-icon {
-  color: #B3C6D4;
+  color: #b3c6d4;
   font-size: 2em;
   position: absolute;
   top: 10px;
@@ -787,6 +783,7 @@ body {
   color: #ffffff;
   font-size: 0.8em;
   margin: 2em 0em 4em;
+  text-align: center;
 }
 .footer-ul {
   display: -webkit-box;
@@ -817,4 +814,188 @@ body {
 }
 .footer-li :hover {
   color: #9fa2ac;
+}
+
+@media screen and (max-width: 1440px) {
+  .main .model-2 .new-way {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 780px) {
+  .main .model-2 h2 {
+    font-size: 2.5em;
+  }
+  .main .model-2 .add-symbol {
+    width: 10%;
+  }
+  .main .model-4 .wrapper-one {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+  }
+  .main .model-4 .wrapper-one .playout {
+    width: 15%;
+  }
+  .main .model-4 .wrapper-one .artist-h2 {
+    font-size: 1.3em;
+  }
+  .main .model-4 .wrapper-one .artist-film,
+.main .model-4 .wrapper-one .artist-p {
+    font-size: 1em;
+  }
+  .main .model-4 .wrapper-one .artist-plus {
+    width: 6%;
+    bottom: 2em;
+    right: 2em;
+  }
+  .main .model-4 .wrapper-two {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
+    grid-row: 3/5;
+  }
+
+  .footer .footer-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+  }
+}
+@media screen and (max-width: 480px) {
+  .main .model-2 .new-way {
+    width: 75%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+    margin: 0em;
+  }
+  .main .model-2 .new-way .new-way-h3 {
+    font-size: 1em;
+  }
+  .main .model-2 .new-way .new-way-p {
+    width: 100%;
+  }
+  .main .model-3 ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+  }
+  .main .model-4 .wrapper-one .playout {
+    width: 40%;
+  }
+  .main .model-4 .wrapper-two {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
+    grid-row: 3/6;
+  }
+  .main .model-4 .wrapper-three {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .main .model-4 .wrapper-four {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3/5;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .main .model-5 .social-gallery {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+  }
+
+  .footer .footer-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: auto;
+        align-content: auto;
+  }
 }
