--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,24 +8,25 @@ body {
   width: 100%;
   min-height: 100vh;
   background-color: $black;
-  overflow-x: hidden;
+  
   .model-1 {
     width: 100%;
     position: relative;
+    
     .nav-left {
-      width: 37%;
+      width: 12%;
       position: absolute;
       left: 0;
-      animation: go-top 1.5s ease 1 both 1.5s;
+      animation: go-top 1.5s ease 1 both 1s;
       z-index: 3;
 
       ul {
         min-height: 100vh;
-        transform: rotate(-90deg);
-        @include flexible(row, nowrap, space-around, center, auto);
+        @include flexible(column, wrap, space-around, center, auto);
       }
 
       li {
+        transform: rotate(-90deg);
         color: $white;
         text-transform: uppercase;
         font-size: 0.6em;
@@ -33,19 +34,19 @@ body {
     }
 
     .nav-right {
-      width: 37%;
+      width: 12%;
       position: absolute;
       right: 0;
-      animation: go-down 1.5s ease 1 both 1.5s;
+      animation: go-down 1.5s ease 1 both 1s;
       z-index: 3;
 
       ul {
         min-height: 100vh;
-        transform: rotate(90deg);
-        @include flexible(row, nowrap, space-around, center, auto);
+        @include flexible(column, wrap, space-around, center, auto);
       }
 
       li {
+        transform: rotate(90deg);
         color: $white;
         text-transform: uppercase;
         font-size: 0.6em;
@@ -99,7 +100,7 @@ body {
 
     .logo-model1 {
       width: 40%;
-      animation: appear 2s linear 1 both 2.4s;
+      animation: appear 2s linear 1 both 1.5s;
       transition: all 0.5s ease;
     }
 
@@ -119,7 +120,7 @@ body {
       color: $white;
       font-size: 1em;
       text-transform: uppercase;
-      animation: appear 1s ease 1 both 4s;
+      animation: appear 1s ease 1 both 2s;
     }
 
     .btn-new.hide {
@@ -134,7 +135,7 @@ body {
       font-size: 1em;
       padding: 12px;
       transition: all 0.5s ease;
-      animation: appear 1.2s linear infinite both 8s;
+      animation: appear 1.2s linear infinite both 2.5s;
     }
   }
 
@@ -228,37 +229,70 @@ body {
       background-color: $white;
       margin: 0 0.4em;
       cursor: pointer;
+      bottom: 2em;
+      z-index: 4;
     }
 
-    .slider-line.active {
-      background-color: $blue;
+    .lines-ul{
+      width: 100%;
+      height: 20px;
+      // background-color: red;
+      padding: 1em;
+      position: absolute;
+      bottom: 2em;
+      z-index: 4;
+      @include flexible(row, nowrap, center, center, auto);
     }
+
+    .line-opa {
+      width: 50px;
+      background-color: $blue;
+      height: 6px;
+      cursor: pointer;
+      margin: 0 0.4em;
+      opacity: 0;
+    }
+
+    .line-opa.active {
+      opacity: 1;
+    }
+
   }
 
   .model-3 {
     width: 100%;
     min-height: 100px;
     background-color: $black;
+
     ul {
-      @include flexible(row, nowrap, flex-start, space-between, auto);
+      @include flexible(row, nowrap, center, center, auto);
 
       li {
-        width: 200px;
         padding: 1em;
+
+        p {
+          font-family: $font-default;
+          font-weight: 600;
+          color: $white;
+          text-transform: uppercase;
+          font-size: 1.1em;
+        }
+
+        img {
+          width: 80%;
+          margin: auto;
+        }
       }
 
-      li p {
-        font-family: $font-default;
-        font-weight: 600;
-        color: $white;
-        text-transform: uppercase;
-        font-size: 1.1em;
+      li.partners-medium {
+        width: 600px;
       }
     }
   }
 
   .model-4 {
     width: 100%;
+
     .wrapper {
       width: 100%;
       min-height: 400px;
@@ -330,6 +364,7 @@ body {
   }
 
   .model-5 {
+
     h4 {
       font-family: $font-default;
       font-weight: 100;
