--- a/css/styles.css
+++ b/css/styles.css
@@ -244,18 +244,18 @@ body {
   background-size: cover;
 }
 .main .model-1 #slide-1 {
-  background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+  background-image: url(../assets/img-prueba1.jpg);
   background-size: cover;
 }
 .main .model-1 #slide-2 {
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
-  background-image: url(https://images5.alphacoders.com/426/426029.jpg);
+  background-image: url(../assets/img-prueba2.png);
 }
 .main .model-1 #slide-3 {
   -webkit-animation-delay: 6s;
           animation-delay: 6s;
-  background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+  background-image: url(../assets/img-prueba3.jpg);
 }
 .main .model1-info {
   width: 100%;
@@ -535,7 +535,6 @@ body {
   width: 50px;
   background-color: #2423d9;
   height: 6px;
-  cursor: pointer;
   margin: 0 0.4em;
   opacity: 0;
 }
@@ -544,7 +543,6 @@ body {
 }
 .main .model-3 {
   width: 100%;
-  min-height: 100px;
   background-color: #212529;
 }
 .main .model-3 ul {
@@ -563,19 +561,18 @@ body {
           align-items: center;
   -ms-flex-line-pack: auto;
       align-content: auto;
-}
-.main .model-3 ul li {
-  padding: 1em;
+  padding: 1em 0em;
 }
 .main .model-3 ul li p {
+  width: 164px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 .main .model-3 ul li img {
-  width: 80%;
+  width: 70%;
   margin: auto;
 }
 .main .model-3 ul li.partners-medium {
@@ -698,6 +695,21 @@ body {
   -ms-grid-row: 3;
   -ms-grid-row-span: 2;
   grid-row: 3/5;
+  position: relative;
+}
+.main .model-4 .wrapper-three .overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+.main .model-4 .wrapper-three:hover .overlay {
+  opacity: 1;
 }
 .main .model-4 .wrapper-four {
   -ms-grid-column: 4;
@@ -706,6 +718,20 @@ body {
   -ms-grid-row: 3;
   -ms-grid-row-span: 2;
   grid-row: 3/5;
+}
+.main .model-4 .wrapper-four .overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+.main .model-4 .wrapper-four.overlay {
+  opacity: 1;
 }
 .main .model-4 .artist-sound {
   width: 30%;
