--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -72,18 +72,18 @@ body {
     }
 
     #slide-1 {
-      background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+      background-image: url(../assets/img-prueba1.jpg);
       background-size: cover;
     }
 
     #slide-2 {
       animation-delay: 3s;
-      background-image: url(https://images5.alphacoders.com/426/426029.jpg);
+      background-image: url(../assets/img-prueba2.png);
     }
 
     #slide-3 {
       animation-delay: 6s;
-      background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+      background-image: url(../assets/img-prueba3.jpg);
     }
   }
 
@@ -236,7 +236,6 @@ body {
     .lines-ul{
       width: 100%;
       height: 20px;
-      // background-color: red;
       padding: 1em;
       position: absolute;
       bottom: 2em;
@@ -248,7 +247,6 @@ body {
       width: 50px;
       background-color: $blue;
       height: 6px;
-      cursor: pointer;
       margin: 0 0.4em;
       opacity: 0;
     }
@@ -261,25 +259,25 @@ body {
 
   .model-3 {
     width: 100%;
-    min-height: 100px;
     background-color: $black;
 
     ul {
       @include flexible(row, nowrap, center, center, auto);
+      padding: 1em 0em;
 
       li {
-        padding: 1em;
 
         p {
+          width: 164px;
           font-family: $font-default;
           font-weight: 600;
           color: $white;
           text-transform: uppercase;
-          font-size: 1.1em;
+          font-size: 1em;
         }
 
         img {
-          width: 80%;
+          width: 70%;
           margin: auto;
         }
       }
@@ -316,11 +314,40 @@ body {
       &-three {
         grid-column: 3/4;
         grid-row: 3/5;
+        position: relative;
+
+        .overlay {
+          width: 100%;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0.5);
+          position: absolute;
+          top: 0;
+          left: 0;
+          transition: all .5s ease;
+          opacity: 0;
+        }
+        &:hover .overlay {
+          opacity: 1;
+        } 
       }
 
       &-four {
         grid-column: 4/5;
         grid-row: 3/5;
+
+        .overlay {
+          width: 100%;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0.5);
+          position: absolute;
+          top: 0;
+          left: 0;
+          transition: all .5s ease;
+          opacity: 0;
+        }
+        &.overlay {
+          opacity: 1;
+        } 
       }
     }
     .artist {
