--- a/css/styles.css
+++ b/css/styles.css
@@ -244,18 +244,21 @@ body {
   background-size: cover;
 }
 .main .model-1 #slide-1 {
-  background-image: url(../assets/img-prueba1.jpg);
+  background-image: url(../assets/img-slider1-1.png);
   background-size: cover;
+  background-position: center;
 }
 .main .model-1 #slide-2 {
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
-  background-image: url(../assets/img-prueba2.png);
+  background-image: url(../assets/img-slider1-2.png);
+  background-position: center;
 }
 .main .model-1 #slide-3 {
   -webkit-animation-delay: 6s;
           animation-delay: 6s;
-  background-image: url(../assets/img-prueba3.jpg);
+  background-image: url(../assets/img-slider1-3.png);
+  background-position: center;
 }
 .main .model1-info {
   width: 100%;
@@ -374,10 +377,11 @@ body {
 }
 .main .model-2-info {
   width: 100%;
-  min-height: 120vh;
+  min-height: 100vh;
   position: absolute;
   z-index: 4;
   top: 0%;
+  padding-top: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -561,10 +565,10 @@ body {
           align-items: center;
   -ms-flex-line-pack: auto;
       align-content: auto;
-  padding: 1em 0em;
+  padding: 3em 0em;
 }
 .main .model-3 ul li p {
-  width: 164px;
+  width: 210px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   color: #ffffff;
@@ -572,11 +576,11 @@ body {
   font-size: 1em;
 }
 .main .model-3 ul li img {
-  width: 70%;
-  margin: auto;
+  width: 50%;
+  margin: auto 1em;
 }
 .main .model-3 ul li.partners-medium {
-  width: 600px;
+  width: 520px;
 }
 .main .model-4 {
   width: 100%;
@@ -687,6 +691,21 @@ body {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
+  position: relative;
+}
+.main .model-4 .wrapper-two .overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+.main .model-4 .wrapper-two:hover .overlay {
+  opacity: 1;
 }
 .main .model-4 .wrapper-three {
   -ms-grid-column: 3;
@@ -708,8 +727,19 @@ body {
   transition: all 0.5s ease;
   opacity: 0;
 }
+.main .model-4 .wrapper-three img {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
 .main .model-4 .wrapper-three:hover .overlay {
   opacity: 1;
+}
+.main .model-4 .wrapper-three:hover .overlay img {
+  width: 100%;
+  height: 100%;
+  -webkit-animation: appear 1s linear 1 both 1s;
+          animation: appear 1s linear 1 both 1s;
 }
 .main .model-4 .wrapper-four {
   -ms-grid-column: 4;
@@ -718,6 +748,7 @@ body {
   -ms-grid-row: 3;
   -ms-grid-row-span: 2;
   grid-row: 3/5;
+  position: relative;
 }
 .main .model-4 .wrapper-four .overlay {
   width: 100%;
@@ -730,8 +761,19 @@ body {
   transition: all 0.5s ease;
   opacity: 0;
 }
-.main .model-4 .wrapper-four.overlay {
+.main .model-4 .wrapper-four img {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.main .model-4 .wrapper-four:hover .overlay {
   opacity: 1;
+}
+.main .model-4 .wrapper-four:hover .overlay img {
+  width: 100%;
+  height: 100%;
+  -webkit-animation: appear 1s linear 1 both 1s;
+          animation: appear 1s linear 1 both 1s;
 }
 .main .model-4 .artist-sound {
   width: 30%;
@@ -886,6 +928,14 @@ body {
   .main .model-2 .add-symbol {
     width: 10%;
   }
+  .main .model-3 ul li p {
+    width: 100px;
+    font-size: 0.7em;
+  }
+  .main .model-3 ul li img {
+    width: 80%;
+    margin: auto 1em;
+  }
   .main .model-4 .wrapper-one {
     -ms-grid-column: 1;
     -ms-grid-column-span: 4;
@@ -952,6 +1002,19 @@ body {
   }
 }
 @media screen and (max-width: 480px) {
+  .main .model-1 .btn-new {
+    padding: 2em 0em;
+    padding: 0.6em 2em;
+    font-weight: 400;
+    font-size: 0.8em;
+  }
+  .main .model-1 .btn-scroll {
+    font-weight: 400;
+    font-size: 0.8em;
+  }
+  .main .model-2-info {
+    padding-top: 100px;
+  }
   .main .model-2 .new-way {
     width: 75%;
     display: -webkit-box;
@@ -993,6 +1056,13 @@ body {
             align-items: center;
     -ms-flex-line-pack: auto;
         align-content: auto;
+  }
+  .main .model-3 li {
+    margin: 1em 0em;
+  }
+  .main .model-3 ul li img {
+    width: 40%;
+    margin: auto;
   }
   .main .model-4 .wrapper-one .playout {
     width: 40%;
