--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -72,18 +72,21 @@ body {
     }
 
     #slide-1 {
-      background-image: url(../assets/img-prueba1.jpg);
+      background-image: url(../assets/img-slider1-1.png);
       background-size: cover;
+      background-position: center;
     }
 
     #slide-2 {
       animation-delay: 3s;
-      background-image: url(../assets/img-prueba2.png);
+      background-image: url(../assets/img-slider1-2.png);
+      background-position: center;
     }
 
     #slide-3 {
       animation-delay: 6s;
-      background-image: url(../assets/img-prueba3.jpg);
+      background-image: url(../assets/img-slider1-3.png);
+      background-position: center;
     }
   }
 
@@ -143,12 +146,14 @@ body {
     @include flexible(row, nowrap, center, center, auto);
     min-height: 100vh;
     position: relative;
+
     &-info {
       width: 100%;
-      min-height: 120vh;
+      min-height: 100vh;
       position: absolute;
       z-index: 4;
       top: 0%;
+      padding-top: 350px;
       @include flexible(column, wrap, center, center, auto);
     }
 
@@ -263,12 +268,12 @@ body {
 
     ul {
       @include flexible(row, nowrap, center, center, auto);
-      padding: 1em 0em;
+      padding: 3em 0em;
 
       li {
 
         p {
-          width: 164px;
+          width: 210px;
           font-family: $font-default;
           font-weight: 600;
           color: $white;
@@ -277,13 +282,13 @@ body {
         }
 
         img {
-          width: 70%;
-          margin: auto;
+          width: 50%;
+          margin: auto 1em;
         }
       }
 
       li.partners-medium {
-        width: 600px;
+        width: 520px;
       }
     }
   }
@@ -309,6 +314,22 @@ body {
       &-two {
         grid-column: 3/5;
         grid-row: 1/3;
+        position: relative;
+
+        .overlay {
+          width: 100%;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0.5);
+          position: absolute;
+          top: 0;
+          left: 0;
+          transition: all .5s ease;
+          opacity: 0;
+        }
+        
+        &:hover .overlay {
+          opacity: 1;
+        }
       }
 
       &-three {
@@ -326,14 +347,28 @@ body {
           transition: all .5s ease;
           opacity: 0;
         }
+
+        img {
+          width: 100%;
+          height: 100%;
+          padding: 0;
+        }
+
         &:hover .overlay {
           opacity: 1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            animation: appear 1s linear 1 both 1s;
+          }
         } 
       }
 
       &-four {
         grid-column: 4/5;
         grid-row: 3/5;
+        position: relative;
 
         .overlay {
           width: 100%;
@@ -345,8 +380,21 @@ body {
           transition: all .5s ease;
           opacity: 0;
         }
-        &.overlay {
+
+        img {
+          width: 100%;
+          height: 100%;
+          padding: 0;
+        }
+
+        &:hover .overlay {
           opacity: 1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            animation: appear 1s linear 1 both 1s;
+          }
         } 
       }
     }
@@ -480,7 +528,9 @@ body {
 
 @media screen and (max-width: 780px) {
   .main {
+
     .model-2 {
+
       h2 {
         font-size: 2.5em;
       }
@@ -490,7 +540,18 @@ body {
       }
     }
 
+    .model-3 {
+      ul li p {
+        width: 100px;
+        font-size: .7em;
+      }
+      ul li img {
+        width: 80%;
+        margin: auto 1em;
+      }
+    }
     .model-4 {
+
       .wrapper-one {
         grid-column: 1/5;
         grid-row: 1/3;
@@ -529,7 +590,28 @@ body {
 }
 @media screen and  (max-width: 480px) {
   .main {
+
+    .model-1{
+      
+      .btn-new {
+        padding: 2em 0em;
+        padding: .6em 2em;
+        font-weight: 400;
+        font-size: .8em;
+      }
+
+      .btn-scroll {
+        font-weight: 400;
+        font-size: .8em;
+      }
+    }
+
     .model-2 {
+
+      &-info {  
+        padding-top: 100px;
+      }
+
       .new-way {
         width: 75%;
         @include flexible(row, wrap, center, center, auto);
@@ -546,8 +628,18 @@ body {
     }
 
     .model-3 {
+
       ul {
         @include flexible(row, wrap, center, center, auto);
+      }
+
+      li {
+        margin: 1em 0em;
+      }
+
+      ul li img {
+        width: 40%;
+        margin: auto;
       }
     }
 
@@ -573,6 +665,7 @@ body {
     }
 
     .model-5 {
+
       .social-gallery {
         @include flexible(row, wrap, center, center, auto);
       }
