--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,13 +1,14 @@
 // Colors
 
-$white: #ffffff;
-$black: #212529;
+$white:      #ffffff;
+$black:      #212529;
 $light-black: #0d0e12;
-$blue: #2423d9;
-$grey: #9fa2ac;
+$blue:        #2423d9;
+$grey:        #9fa2ac;
 
 
 //Family
 
 $font-default: 'Montserrat', sans-serif;
+$font-open:    'Open Sans', sans-serif;
 
