--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,10 +1,11 @@
 // Colors
 
-$white:      #ffffff;
-$black:      #212529;
+$white:       #ffffff;
+$white50:     rgba(255, 255, 255, 0.5);
+$black:       #212529;
 $light-black: #0d0e12;
 $blue:        #2423d9;
-$grey:        #9fa2ac;
+$grey:        #b3c6d4;
 
 
 //Family
