--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -579,6 +579,7 @@ body {
         margin: auto 1em;
       }
     }
+
     .model-4 {
 
       .wrapper-one {
@@ -599,8 +600,12 @@ body {
           font-size: 1em;
         }
 
+        .artist-sound {
+          width: 25%;
+        }
+
         .artist-plus {
-          width: 6%;
+          width: 4%;
           bottom: 2em;
           right: 2em;
         }
@@ -609,6 +614,13 @@ body {
       .wrapper-two {
         grid-column: 1/3;
         grid-row: 3/5;
+      }
+    }
+
+    .model-5 {
+      
+      .social-icon {
+        font-size: 2em;
       }
     }
   }
@@ -708,7 +720,7 @@ body {
       }
 
       .social-icon {
-        font-size: 2em;
+        font-size: 1.5em;
       }
     }
   }
